added equality button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="buttons">
                 <button id="multiply" data-operation="multiply" class="action">x</button>
                 <button id="divide" data-operation="divide" class="action">/</button>
+                <button id="result" data-operation="result" class="action">=</button>
             </div>
         </div>
         <br>
