minor visual improvements

--- a/index.html
+++ b/index.html
@@ -10,41 +10,44 @@
 </head>
 <body>
     <div id="main">
+        <span></span>
         <div id="results">
             <input type="number" name="value" id="value" autofocus>
-            <span></span>
-        </div>
-        <div id="allButtons">    
-            <div class="buttons">
-                <button id="add" data-operation="add" class="action">+</button>
-                <button id="subtract" data-operation="subtract" class="action">-</button>
-                <button id="reset" data-operation="reset" class="resultsBtn">AC</button>
-            </div>
-            <div class="buttons">
-                <button id="multiply" data-operation="multiply" class="action">x</button>
-                <button id="divide" data-operation="divide" class="action">/</button>
-                <button id="result" data-operation="result" class="action">=</button>
-            </div>
         </div>
         <br>
-        <div id='numbers'>
-            <div class="buttons">
-                <button data-operation='1'>1</button>
-                <button data-operation='2'>2</button>
-                <button data-operation='3'>3</button>
+        <div id="buttonsWnumbers">
+            <div id="allButtons">    
+                <div class="buttons">
+                    <button id="add" data-operation="add" class="action">+</button>
+                    <button id="subtract" data-operation="subtract" class="action">-</button>
+                    <button id="reset" data-operation="reset" class="resultsBtn">AC</button>
+                </div>
+                <div class="buttons">
+                    <button id="multiply" data-operation="multiply" class="action">x</button>
+                    <button id="divide" data-operation="divide" class="action">/</button>
+                    <button id="result" data-operation="result" class="action">=</button>
+                </div>
             </div>
-            <div class="buttons">
-                <button data-operation='4'>4</button>
-                <button data-operation='5'>5</button>
-                <button data-operation='6'>6</button>
-            </div>
-            <div class="buttons">
-                <button data-operation='7'>7</button>
-                <button data-operation='8'>8</button>
-                <button data-operation='9'>9</button>
-            </div>
-            <div class="buttons">
-                <button data-operation='0'>0</button>
+            <br>
+            <div id='numbers'>
+                <div class="buttons">
+                    <button data-operation='1'>1</button>
+                    <button data-operation='2'>2</button>
+                    <button data-operation='3'>3</button>
+                </div>
+                <div class="buttons">
+                    <button data-operation='4'>4</button>
+                    <button data-operation='5'>5</button>
+                    <button data-operation='6'>6</button>
+                </div>
+                <div class="buttons">
+                    <button data-operation='7'>7</button>
+                    <button data-operation='8'>8</button>
+                    <button data-operation='9'>9</button>
+                </div>
+                <div class="buttons">
+                    <button data-operation='0'>0</button>
+                </div>
             </div>
         </div>
     </div>
